Fixed podcast page spacing

--- a/client/src/components/pages.css
+++ b/client/src/components/pages.css
@@ -1,16 +1,19 @@
 .podcast-header__container {
-    width: 100vw;
-    height: 25vw;
+    width: 100%;
+    height: 45vh;
+
+    display: flex;
 
     background-color: rgb(29, 29, 29);
 
 }
 
 .podcast-header__content {
-    height: 100%;
-    width: 100%;
 
-    padding: 2rem 4rem 2rem 4rem;
+    width: auto;
+    height: auto;
+
+    padding: 2rem 2rem 2rem 2rem;
 
     display: flex;
 
@@ -18,13 +21,32 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
+
+}
+
+.podcast-header__image{
+    flex: 1 0 auto;
 }
 
 .podcast-header__meta {
+
+    flex: 0 1 auto;
+
+    display: flex;
+    flex-direction: column;
+
+    /* width: 50%; */
+
+    max-width: 100%;
+    max-height: 100%;
+
     margin: 0 3rem 0 3rem;
+
+    overflow: hidden;
 }
 
 .podcast-header__title {
+
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 2rem;
@@ -33,13 +55,20 @@
 }
 
 .podcast-header__author {
+
     font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
     font-size: 1rem;
     color: rgb(170, 170, 170);
 }
 
 .podcast-header__subtitle {
+
+    max-width: auto;
+    max-height: auto;
+
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
     color: rgb(170, 170, 170);
+    text-overflow: ellipsis;
 }
